--- a/src/NZHeraldScraper/Resources/config.json
+++ b/src/NZHeraldScraper/Resources/config.json
@@ -1,11 +1,7 @@
 {
-  "Country": "//article/header/div/div[1]/a/span",
-  "Title": "//article/header/div/h1/a",
-  "Date": "//article/header/div/div[2]",
-  "Author": "//div[contains(@class, 'author-name')]//div[contains(@class, 'bio-text')]/span[contains(@class, 'author')]//span[contains(@class, 'author-title')]",
-  "AuthorBio": "//div[contains(@class, 'author-name')]//div[contains(@class, 'bio-text')]/div[contains(@class, 'author-bio')]",
-  "Paragraphs": {
-    "_xpath": "//*[@id='article-content']",
-    "Text": ".//p[contains(@class, 'element-paragraph')]"
-  }
+  "Title": "//article//header//h1",
+  "Date": "//article//header//div[contains(@class, 'publish')]",
+  "Author": "//div[contains(@class, 'author-name')]//div[contains(@class, 'bio-text')]//span[contains(@class, 'author')]//span[contains(@class, 'author-title')]",
+  "AuthorBio": "//div[contains(@class, 'author-name')]//div[contains(@class, 'bio-text')]//div[contains(@class, 'author-bio')]",
+  "Paragraphs": "//*[@id='article-content']//p[contains(@class, 'element-paragraph')]"
 }
